Fix hero__img overflow out of flex container

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ body {
   margin: 0;
 }
 
+img {
+  max-width: 100%;
+}
+
 h1,
 h2,
 h3,
